# mcp-chain

./: .gitignore  CLAUDE.md  LICENSE  README.md  cli_chain_example.py  comprehensive_phase7_test.py  design.md  final_phase7_test.py  integration_test_runner.py  mcp_chain_server.py  mcp_protocol.md  mcp_protocol_test.py  phase7_integration_test.py  pyproject.toml
.github/workflows/: auto-release.yml  publish.yml  python-package.yml
ai/: TODO.md  TODO_template.md
examples/: complete_integration_demo.py  design_examples.py  multi_command_demo.py  protocol_testing_server.py  simple_cli_example.py
scripts/: test-ci.sh
src/mcp_chain/: __init__.py  builder.py  cli.py  cli_mcp.py  config.py  dummy.py  external.py  fastmcp.py  front.py  middleware.py  serve.py  types.py
tests/: test_architecture.py  test_basic.py  test_chain_building.py  test_cli.py  test_cli_mcp.py  test_design_sync.py  test_dict_verification.py  test_external.py  test_fastmcp.py  test_fastmcp_end_to_end.py  test_fastmcp_error_handling.py  test_fastmcp_integration.py  test_final_architecture.py  test_final_demo.py  test_front.py  test_imports.py  test_mcp_protocol_integration.py  test_middleware.py  test_middleware_basic.py  test_phase10_cleanup.py  test_serve.py  test_transformers.py  test_type_system_update.py  test_types.py  test_updated_factory.py
